# IronNest

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  justfile  traefik-config.yml  traefik.yml
crates/mish-cli/: Cargo.toml
crates/mish-cli/src/: main.rs  options.rs
migrations/: 20241112031832_initial.sql  20241201015702_configs.sql  20250518145401_mish.sql  20250518145401_mish_states.sql  20250527201751_ipld_blobs.sql
public/: manifest.json  service-worker.js
src/: app.rs  error_template.rs  fileserv.rs  handlers.rs  lib.rs  main.rs  shell.rs  types.rs  utils.rs
src/components/: checkbox.rs  color_picker.rs  command_box.rs  dashboard_panel.rs  device_list.rs  device_list_card.rs  device_modal.rs  device_panel.rs  layout.rs  login_form.rs  mod.rs  modal.rs  navbar.rs  planned_meals.rs  refresh_button.rs  ring_cameras.rs  roku_tv_remote.rs  select.rs  slider.rs  text_input.rs
src/components/mish/: dag_inspector_page.rs  editor.rs  ipld_blob_page.rs  json_editor.rs  mish_button.rs  mish_state_page.rs  mod.rs  new_mish_state_dialog.rs  number_editor.rs  raw_editor.rs  text_editor.rs
src/components/pages/: accounts_page.rs  actions_page.rs  configs_page.rs  dashboard_page.rs  devices_page.rs  integrations_page.rs  login_page.rs  mish_state_page.rs  mod.rs  ring_login_page.rs  scripts_page.rs  settings_page.rs  websocket_page.rs
src/integrations/: mod.rs
src/integrations/alexa/client/: mod.rs
src/integrations/device_discovery/: mod.rs
src/integrations/device_discovery/client/: mod.rs
src/integrations/device_discovery/types/: mod.rs
src/integrations/efuy/client/: mod.rs
src/integrations/efuy/types/: mod.rs
src/integrations/govee/: mod.rs
src/integrations/instacart/client/: mod.rs
src/integrations/instacart/types/: mod.rs
src/integrations/iron_nest/: cron.rs  mod.rs
src/integrations/iron_nest/client/: mod.rs
src/integrations/iron_nest/mish/: README.md  chris.fish_tank.json  fish_tank.rhai  fish_tank_cron.rhai  justfile  mod.rs  run.json
src/integrations/iron_nest/shared/: mod.rs
src/integrations/iron_nest/types/: config.rs  mod.rs
src/integrations/openai/client/: mod.rs
src/integrations/ring/: mod.rs
src/integrations/ring/client/: mod.rs
src/integrations/ring/types/: mod.rs
src/integrations/roku/: mod.rs
src/integrations/roku/client/: mod.rs
src/integrations/roku/types/: mod.rs
src/integrations/simpli_safe/client/: mod.rs
src/integrations/stoplight/client/: mod.rs
src/integrations/stoplight/types/: mod.rs
src/integrations/tplink/: mod.rs
src/integrations/tplink/client/: mod.rs
src/integrations/tplink/types/: mod.rs
src/integrations/tuya/client/: mod.rs
src/integrations/tuya/types/: mod.rs
src/mish_api/: mod.rs
src/server/: actions.rs  mod.rs
src/server/dashboard_page/: mod.rs
src/server/integrations_page/: mod.rs
src/server/ring/: mod.rs
src/server/roku/: mod.rs
src/server/tplink/: mod.rs
style/: main.scss
