[package]
name = "iron_nest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
base64 = "0.21.5"
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
